# PySR

./: .all-contributorsrc  .coveragerc  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .readthedocs-custom-steps.yml  .readthedocs-requirements.txt  .release-please-manifest.json  .travis.yml  404.html  Apptainer.def  CHANGELOG.md  CITATION.cff  CITATION.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.minimal  LICENSE  Project.toml  README.md  TODO.md  __main__.py  api-advanced.html  api.html  arrays.jl  backend.html  benchmark.jl  benchmark.sh  benchmarktimes.txt  bruh.py  dataset.jl  docker-bake.hcl  environment.yml  eureqa.jl  eureqa.py  example.py  example_sequence.py  examples.html  gen_docs.sh  generate_papers.py  (+29 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  sweep-template.yml
.github/workflows/: CI.yml  CI_Windows.yml  CI_apptainer.yml  CI_conda.yml  CI_conda_forge.yml  CI_docker.yml  CI_docker_large_nightly.yml  CI_large_nightly.yml  CI_mac.yml  CI_rust_backend_connector.yml  CI_slurm.yml  codeql-analysis.yml  docker_deploy.yml  docs.yml  paper_image_cleanup.yml  pypi_deploy.yml  python-publish.yml  release-please.yml  reusable.yml  update_backend.yml  update_backend_version.py
1/: 404.html  _api-advanced.html  _api.html  _index.html  api-advanced.html  api.html  backend.html  examples.html  hashmap.json  operators.html  options.html  papers.html  tuning.html
1/assets/: api.md._ZMRW7lg.js  app.BdaLfQr6.js  app.Ca6TMohX.js  examples.md.VuBRjyM6.js  index.md.BtES-WmQ.js  index.md.BtES-WmQ.lean.js  options.md.C6Vekp2e.js  style.DaY4J_mS.css  tuning.md.DFwyv9q9.lean.js
_api/: index.html
all_contributors/: package.json  run_all_contrib.sh
api/: index.html
api-advanced/: index.html
backend/: index.html
benchmarks/: README.md  benchmark.sh  compare_backends.py  hyperparamopt.py  print_best_model.py  space.py
datasets/: FeynmanEquations.csv
dev/: 404.html  api-advanced.html  api.html  backend.html  examples.html  hashmap.json  index.html  operators.html  options.html  papers.html  tuning.html
dev/assets/: api-advanced.md.BDvdizbh.js  api-advanced.md.BDvdizbh.lean.js  api.md.BJbpwh1H.js  api.md.BJbpwh1H.lean.js  app.B-vDOqXN.js  app.BEVa8iry.js  app.BFHeISqS.js  app.BGNG7oBD.js  app.BKIDvpl9.js  app.BYQExTk3.js  app.BjAMUPsu.js  app.BksMTF3L.js  app.C-RvN4Bo.js  app.C5e9xmzf.js  app.C63wtur-.js  app.CFzZST1c.js  app.D8w-qG-I.js  app.DQWnBhw7.js  app.DmgDCa77.js  app.FvzdBkRo.js  app.fjtasvsA.js  app.qnEKEzpr.js  app.rnAL_e4h.js  backend.md.B9-qAgij.js  backend.md.B9-qAgij.lean.js  backend.md.BPI6vp5P.js  backend.md.BPI6vp5P.lean.js  backend.md.BYGqDuvj.js  backend.md.BYGqDuvj.lean.js  backend.md.BevkIaPa.js  backend.md.BevkIaPa.lean.js  backend.md.Bh7D1--G.js  backend.md.Bh7D1--G.lean.js  backend.md.C0ssuBW_.js  backend.md.C0ssuBW_.lean.js  backend.md.CQQ2aUZ0.js  backend.md.CQQ2aUZ0.lean.js  backend.md.CTq-fxgi.js  backend.md.CTq-fxgi.lean.js  backend.md.CeWdRtRu.js  (+273 more)
docs/: .gitignore  Project.toml  README.md  _api.md  _sidebar.md  allcontributors.dockerfile  api-advanced.md  api.md  backend.md  deploy.jl  examples.md  examples_sequence.md  gen_api.py  gen_docs.sh  gen_param_docs.py  gen_vitepress_index.py  generate_papers.py  index.html  interactive-docs.md  operators.md  options.md  package-lock.json  package.json  papers.md  papers.yml  papers_header.md  param_groupings.yml  requirements.txt  start.md  tuning.md
docs/all_contributors/: .all-contributorsrc  package.json
docs/src/: _api-advanced.md  _api.md  _api_template.md  _index.md  (+5 more)
examples/: index.html  klein_gordon_dispersion.py  pysr_demo.ipynb  pysr_demo_paddle.py  pysr_demo_pytorch.py
gui/: .gitattributes  .pre-commit-config.yaml  Dockerfile  README.md  app.py  data.py  gen_example_data.py  install_pysr.sh  plots.py  processing.py  requirements.txt  run_pysr_and_save.py
interactive-docs/: index.html
js/: mathjax.js
julia/: CheckConstraints.jl  ConstantOptimization.jl  Equation.jl  EvaluateEquation.jl  LossFunctions.jl  Mutate.jl  MutationFunctions.jl  Node.jl  Operators.jl  PopMember.jl  Population.jl  RegularizedEvolution.jl  SimplifyEquation.jl  SingleIteration.jl  Utils.jl  complexityChecks.jl  constants.jl  errors.jl  eval.jl  halloffame.jl  loop.jl  operators.jl  optimization.jl  randomMutations.jl  regEvolCycle.jl  simulatedAnnealing.jl  slurm.jl  sr.jl  truth.jl  truthPops.jl  utils.jl
lgga/: FeynmanProblem.py  Oracle.py  Transformation.py  Truth.py  constraint_discovery.py
old_docs/: pydoc-markdown.yml
operators/: index.html
options/: index.html
papers/: index.html
pysr/: Problems.py  __init__.py  __main__.py  _checkpoint.py  backsolve_options.py  denoising.py  deprecated.py  export.py  export_jax.py  export_jax_header.py  export_latex.py  export_numpy.py  export_paddle.py  export_sympy.py  export_torch.py  export_torch_header.py  expression_specs.py  expression_types.py  feature_selection.py  feynman_problems.py  julia_extensions.py  julia_helpers.py  julia_import.py  julia_registry_helper.py  julia_registry_helpers.py  juliapkg.json  logger_specs.py  package_compiler.py  param_groupings.yml  pysr_expression.py  regressor_sequence.py  sklearn.py  sklearn_monkeypatch.py  sr.py  ssr.py  utils.py  version.py  version_check.py
pysr_rust_backend/: Cargo.toml  README.md  pyproject.toml
pysr_rust_backend/src/: lib.rs
pysr_rust_backend/tests/: test_search.py
scripts/: paper_image_sync.py  validate_papers_yml.py
search/: search_index.json
src/: sr.py
stylesheets/: papers_header.txt
test/: benchmark.sh  test.py  test_env.py  test_jax.py  test_static_libpython_warning.py  test_torch.py  travis.sh
tuning/: index.html
v1/: index.html
v1.5.9/: 404.html  api-advanced.html  api.html  backend.html  examples.html  hashmap.json  index.html  operators.html  options.html  papers.html  siteinfo.js  tuning.html
v2.0.0a2/: 404.html  api-advanced.html  api.html  backend.html  examples.html  hashmap.json  index.html  operators.html  options.html  papers.html  tuning.html
(+823 files in other folders)
