[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pysr"
version = "1.3.0"
authors = [
    {name = "Miles Cranmer", email = "miles.cranmer@gmail.com"},
]
description = "Simple and efficient symbolic regression"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "sympy>=1.0.0,<2.0.0",
    "pandas>=0.21.0,<3.0.0",
    "numpy>=1.13.0,<3.0.0",
    "scikit_learn>=1.0.0,<2.0.0",
    "juliacall==0.9.23",
    "click>=7.0.0,<9.0.0",
    "setuptools>=50.0.0",
]

[project.optional-dependencies]
dev = [
    "beartype>=0.19,<0.20",
    "coverage>=7,<8",
    "coveralls>=4,<5",
    "ipykernel>=6,<7",
    "ipython>=8,<9",
    "jax[cpu]>=0.4,<0.5",
    "jupyter>=1,<2",
    "mypy>=1,<2",
    "nbval>=0.11,<0.12",
    "pandas-stubs",
    "pre-commit>=3.7,<5",
    "pytest-cov>=5,<7",
    "pytest>=8,<9",
    "tensorboard>=2,<3",
    "torch>=2,<3",
    "types-openpyxl",
    "types-pytz",
]

[tool.setuptools]
packages = ["pysr", "pysr._cli", "pysr.test"]
include-package-data = false
package-data = {pysr = ["juliapkg.json"]}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.isort]
profile = "black"
