[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysr"
version = "2.0.0a1"
authors = [
    {name = "Miles Cranmer", email = "miles.cranmer@gmail.com"},
]
description = "Simple and efficient symbolic regression"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "sympy>=1.0.0,<2.0.0",
    "pandas>=0.21.0,<3.0.0",
    "numpy>=1.13.0,<3.0.0",
    "scikit_learn>=1.0.0,<2.0.0",
    "juliacall>=0.9.28,<0.9.29",
    "click>=7.0.0,<9.0.0",
    "typing-extensions>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
docs = [
    "docstring-parser>=0.17.0",
    "pyyaml>=6.0.0",
]
dev = [
    "coverage>=7,<8",
    "beartype>=0.19,<0.23",
    "ipykernel>=6,<7",
    "ipython>=8,<9",
    "jax[cpu]>=0.4,<0.6",
    "jupyter>=1,<2",
    "mypy>=1,<2",
    "nbval>=0.11,<0.12",
    "pandas-stubs",
    "pre-commit>=3.0,<5",
    "pytest-cov>=5,<8",
    "pytest>=8,<9",
    "tensorboard>=2,<3",
    "torch>=2,<3",
    "types-openpyxl",
    "types-pytz",
]

[tool.isort]
profile = "black"
